--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,7 @@
         <ul class="list">
           <li class="itemTwo"><a href="../html/about.html">About</a></li>
           <li class="itemTwo"><a href="../html/blog.html">Blog</a></li>
-          <li class="itemTwo"><a href="../html/log.html">Beta/a></li>
+          <li class="itemTwo"><a href="../html/beta.html">Beta</a></li>
         </ul>
       </div>
       <div class="item"><a href="../html/login.html">登录账号Login</a></div>
@@ -368,9 +368,7 @@
         </div>
       </section>
     </main>
-    <fm-player
-      playlist-src="../json/playlists/VOCALOID.json"
-    ></fm-player>
+    <fm-player playlist-src="../json/playlists/VOCALOID.json"></fm-player>
   </body>
   <script>
     let currentIndex = -1;
