--- a/html/home.html
+++ b/html/home.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,user-scalable = yes"
+    />
     <title>冰窟 | Home</title>
     <link rel="stylesheet" href="../css/body.css" />
     <link rel="stylesheet" href="../css/nav.css" />
@@ -18,7 +21,7 @@
         <ul class="list">
           <li class="itemTwo"><a href="../html/about.html">About</a></li>
           <li class="itemTwo"><a href="../html/blog.html">Blog</a></li>
-          <li class="itemTwo"><a href="../html/log.html">Beta</a></li>
+          <li class="itemTwo"><a href="../html/beta.html">Beta</a></li>
         </ul>
       </div>
       <div class="item"><a href="../html/login.html">登录账号Login</a></div>
